When adding a folder to configuration, normalize the path semantically

The folder path is later used in string matches so it must be normalized
by removing double directory sepearators, up dir and other valid Unix directory
spec parts that are valid but confuse `canBeSearched()`.

BUG: 434919